# ct

./: .envrc  .gitignore  .rustfmt.toml
.local/: cache
.local/bin.edge/: ::alloc  ::alloc:paths  ::read  ::read2  config::cargo.toml.json  config::cargo.toml.json?cache  config::packer  config::vagrant:Vagrantfile.rb  config::vagrant:enabled  db::  dev:edit  dev:entr.loop  dev:entr.on_loop  dev:make_one_source_html  dev:make_source_html  dev:make_source_html.vim  dev:new  git:ls-files  git:push  local::cargo:install  local:install_local_bin  meta::list:Exec.cmd  meta:decom  meta:sanction  meta:test_is_topic_sanctioned  meta:unsanction  packer:  packer:build.pkr.json  packer:config  pkt:homebrew.install  pkt:rbenv-doctor.install  pkt:rbenv.install  pkt:rustup.install  sanctioned::spiritus_sanctius  state::vagrant:export  state::vagrant:status  state::vagrant:up  std::echo  std::for_each  std::join  (+13 more)
component/cargo/: Cargo.toml  Cargo.yaml
component/cargo/rustbug00/: Cargo.toml
component/cargo/rustbug00/src/: main.rs
component/cargo/xc/: Cargo.toml
component/cargo/xc/src/: lib.rs  main.rs
component/cargo/xc/src/lib/: lib.rs
component/cargo/xc/src/lib/lib/: error.rs  ssh_config.rs  terrarust.rs  vagrant_machine_readable_quote_unquote.rs
component/cargo/xr/: .gitignore  Cargo.toml
component/cargo/xr-dyn/: Cargo.toml
component/cargo/xr-dyn/src/: lib.rs
component/cargo/xr-parse/: Cargo.toml
component/cargo/xr-parse/src/: lib.rs  parse.rs
component/cargo/xr-parse/src/parse/: any.rs  either.rs  list.rs  token.rs
component/cargo/xr-token/: Cargo.toml
component/cargo/xr-token/src/: lib.rs  token.rs
component/cargo/xr-token/src/token/: prop.rs  slicy.rs  span.rs
component/cargo/xr/src/: main.rs
component/cargo/xr/src/lib/: lib.rs
component/cargo/xr/src/lib/lib/: error.rs  parse_ruby.ron  parse_ruby.rs  ruby_sources.rs  version.rs
component/cargo/xs/: Cargo.toml
component/cargo/xs/src/: __user.rs  ast.rs  clear.rs  cli.rs  engine.rs  error.rs  eval.rs  input.rs  main.rs  output.rs
component/cargo/xs/src/eval/: write.rs
component/packer/: .gitignore  Database.ron  build.pkr.ron
component/shell/: boot_build.alpine.sh  rbenv:install-3.0.1.sh  script.sh  vm.alpine.cargo.install.sh  vm.alpine.docker.install.sh  vm.alpine.init.sh  vm.alpine.ruby_dev.sh  vm.alpine.rustup.install.sh  vm::init.sh  vm::install.sh
component/vagrant/: Database.ron  Vagrantfile  Vagrantfile.targets
dev_exec/: ::alloc  ::alloc:paths  ::read  ::read2  _reference.pakcer:konfig  cache:clear  cache:push  cargo:build  cargo:build_release  cargo:dev_workspace:for_real  cargo:fmt  cargo:update  cargo:update_buildtag  config::cargo.toml.json  config::cargo.toml.json?cache  config::packer  config::vagrant:Vagrantfile.rb  config::vagrant:enabled  db::  detest  git:push  life  local::cargo:install  logout  meta:decom  meta:sanction  meta:test_is_topic_sanctioned  meta:unsanction  packer:  packer:build.pkr.json  packer:config  pkt:homebrew.install  pkt:rbenv-doctor.install  pkt:rustup.install  spec:::std::to_json  state::vagrant:export  state::vagrant:status  state::vagrant:up  std::to_json  sudo:install  (+6 more)
dev_exec/::decommission/: packer:build:alpine.base  packer:build:alpine.base.null  (+7 more)
(+47 files in other folders)
