[package]
name = 'xc'
version = '0.0.1'
edition = '2018'
[dependencies.bincode]
version = '1.3.2'

[dependencies.log]
version = '0.4'

[dependencies.mdl-terraform]
git = 'https://gitlab.com/gvz/rs.git'
package = 'mdl-terraform'
branch = 'main'

[dependencies.pretty_env_logger]
version = '0.4'

[dependencies.ron]
version = '0.6.4'
optional = true

[dependencies.serde]
version = '1.0'
features = ['derive']
optional = true

[dependencies.serde-transcode]
version = '1.1.0'

[dependencies.serde_cbor]
version = '0.11.1'

[dependencies.serde_json]
version = '1.0'

[dependencies.serde_yaml]
version = '0.8'

[dependencies.syn]
version = '1.0.55'
features = [
    'extra-traits',
    'full',
    'visit',
    'visit-mut',
]
optional = true

[dependencies.termcolor]
version = '1.1.2'

[dependencies.toml]
version = '0.5'

[features]
default = [
    'syn',
    'ron',
    'serde',
]
