[package]
name = 'xs'
version = '0.0.1'
edition = '2018'
[dependencies.log]
version = '0.4'

[dependencies.pretty_env_logger]
version = '0.4'

[dependencies.ron]
version = '0.6.4'
optional = true

[dependencies.serde]
version = '1.0'
features = ['derive']
optional = true

[dependencies.serde_json]
version = '1.0'

[dependencies.termcolor]
version = '1.1.2'

[dependencies.wind]
git = 'https://gitlab.com/gvz/rs'
package = 'wind'
branch = 'main'

[dependencies.xc]
version = '0.0.1'
path = '../xc'

[dependencies.xerr]
git = 'https://gitlab.com/gvz/rs'
package = 'xerr'
branch = 'main'

[features]
default = [
    'ron',
    'serde',
]
